--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -61,6 +61,19 @@ ul.breadcrumb li a:hover {
   background-color: white;
 }
 
+.header-container-analysis {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  padding: 0px 6px 0px 0px;
+  z-index: 99999;
+  top: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
 .overall-container {
   height: 100vh;
   overflow: auto;
@@ -350,4 +363,20 @@ b {
   color: #4154f1;
   font-weight: bold;
   cursor: pointer;
+}
+
+.vendor-actions {
+  display: flex;
+  align-items: center;
+
+  input:focus {
+    border: solid 2px #3f51b5 !important;
+    outline: none;
+  }
+
+  .search {
+    height: 32px;
+    padding: 0px 8px;
+
+  }
 }
