--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -92,4 +92,12 @@
         </mat-paginator>
     </div>
 
+    <!-- <div class="paginator">
+        paginator
+        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
+    </div> -->
+
 </div>
