--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -469,7 +469,8 @@
 
           <div class="vendor-actions">
             <div class="search-vendor">
-              <input matInput type="text" class="search" placeholder="search category" (keyup)="onCategoryFilter($event)">
+              <input matInput type="text" class="search" placeholder="search category"
+                (keyup)="onCategoryFilter($event)">
             </div>
           </div>
         </div>
@@ -483,7 +484,8 @@
             </ng-container>
 
             <ng-container matColumnDef="Date">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Posted On </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Posted On
+              </th>
               <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
             </ng-container>
 
@@ -494,12 +496,13 @@
             </ng-container>
 
             <ng-container matColumnDef="VendorCount">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VendorCount"> Vendor Count
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VendorCount"> Vendor
+                Count
               </th>
               <td mat-cell *matCellDef="let element">
-                 <p class="count" (click)="vendorCategoryPopup(element.category_skill,element.posted_on, 'vendor')">
+                <span class="count" (click)="vendorCategoryPopup(element.category_skill,element.posted_on, 'vendor')">
                   {{element.vendorcount}}
-                </p> 
+                </span>
               </td>
             </ng-container>
 
@@ -522,7 +525,7 @@
             </div>
           </div>
         </div>
-        
+
         <hr>
         <section class="table-style mat-elevation-z8">
           <table mat-table [dataSource]="dataSourceVendor" class="responsive-table">
@@ -547,15 +550,16 @@
             </ng-container>
 
             <ng-container matColumnDef="CategoryCount">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CategoryCount"> Category Count
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CategoryCount">
+                Category Count
               </th>
               <td mat-cell *matCellDef="let element">
-                <p class="count" (click)="vendorCategoryPopup(element.vendor, element.posted_on, 'category')">
-                  {{element.category_count}} 
-                </p> 
+                <span class="count" (click)="vendorCategoryPopup(element.vendor, element.posted_on, 'category')">
+                  {{element.category_count}}
+                </span>
               </td>
             </ng-container>
-            
+
             <tr mat-header-row *matHeaderRowDef="dataTableColumnsVendorAnalysis; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: dataTableColumnsVendorAnalysis;"></tr>
           </table>
@@ -567,8 +571,15 @@
   </div>
 
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
-    <div class="header-container-leading-resources">
+    <div class="header-container-leading-resources" style="padding-right: 6px;">
       <span class="header-text">Dice Requirement Tags</span>
+
+      <div class="vendor-actions">
+        <div class="search-vendor">
+          <input matInput type="text" class="search dice" placeholder="search ..." (keyup)="onDiceFilter($event)" >
+        </div>
+      </div>
+
     </div>
     <hr>
     <section class="table-style-dice mat-elevation-z8" style="height: 630px; overflow-Y: scroll;">
