--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -9,7 +9,7 @@
         </span>
         <div class="hot-list-actions">
             <div class="search-hot-list">
-                <input matInput type="text" class="search" placeholder="search " (keyup)="onFilter($event)">
+                <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
                     <th mat-header-cell *matHeaderCellDef > LinkedIn Url </th>
                     <td mat-cell *matCellDef="let element">
                         <span class="consultant-name">
-                            <a class="profile" (click)="lockProfile(element.id)">Lock
+                            <a class="profile" (click)="lockProfile(element.c_id)">Lock
                                 Profile</a>
                         </span>
 
@@ -82,22 +82,12 @@
         <hr>
     </div>
 
-
     <div class="paginator">
         <!-- paginator -->
-        <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-            [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-            [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
-            [pageIndex]="pageIndex" aria-label="Select page">
-        </mat-paginator>
-    </div>
-
-    <!-- <div class="paginator">
-        paginator
         <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
             [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
             [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
         </mat-paginator>
-    </div> -->
+    </div>
 
 </div>
