--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -41,7 +41,7 @@
         <!-- Date-->
         <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Date" mat-sort-header> Date </th>
-          <td mat-cell *matCellDef="let element"  nowrap> {{element?.createddate | date:'MM-dd-yyyy'}} </td>
+          <td mat-cell *matCellDef="let element" nowrap> {{element?.createddate | date:'MM-dd-yyyy'}} </td>
         </ng-container>
         <!-- ID-->
         <!-- <ng-container matColumnDef="Id">
@@ -55,8 +55,8 @@
         </ng-container> -->
         <!-- Name-->
         <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort byName" mat-sort-header >Name </th>
-          <td mat-cell *matCellDef="let element" >
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort byName" mat-sort-header>Name </th>
+          <td mat-cell *matCellDef="let element">
             <span class="consultant-id" (click)="goToConsultantInfo(element, flag)">{{element?.consultantname}}
             </span>
           </td>
@@ -75,45 +75,46 @@
           </ng-container> -->
         <!-- Email-->
         <ng-container matColumnDef="Email">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email" mat-sort-header > Email</th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email" mat-sort-header> Email</th>
           <td mat-cell *matCellDef="let element"> {{element?.consultantemail}}
           </td>
         </ng-container>
         <!-- Contact Number-->
         <ng-container matColumnDef="ContactNumber">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Contact Number" >
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Contact Number">
             Contact Number </th>
           <td mat-cell *matCellDef="let element" nowrap> {{element?.contactnumber}}
           </td>
         </ng-container>
         <!-- Visa-->
         <ng-container matColumnDef="Visa">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Visa" mat-sort-header > Visa</th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Visa" mat-sort-header> Visa</th>
           <td mat-cell *matCellDef="let element"> {{element?.visa_status}}
           </td>
         </ng-container>
         <!-- Current Location -->
         <ng-container matColumnDef="CurrentLocation">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Current Location" mat-sort-header >Current
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Current Location"
+            mat-sort-header>Current
             Location </th>
           <td mat-cell *matCellDef="let element"> {{element?.currentlocation.replace(', USA', '')}}
           </td>
         </ng-container>
         <!-- Company Column -->
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Company" mat-sort-header > Company</th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Company" mat-sort-header> Company</th>
           <td mat-cell *matCellDef="let element"> {{element.companyname}}
           </td>
         </ng-container>
         <!-- Position Column -->
         <ng-container matColumnDef="Position">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Position" mat-sort-header > Position</th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Position" mat-sort-header> Position</th>
           <td mat-cell *matCellDef="let element"> {{element.position}} </td>
         </ng-container>
 
         <!-- Exp Column -->
         <ng-container matColumnDef="Experience">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header > Experience
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header> Experience
           </th>
           <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
         </ng-container>
@@ -127,14 +128,14 @@
 
         <!-- RAte Column -->
         <ng-container matColumnDef="Rate">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header > Rate </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header> Rate </th>
           <td mat-cell *matCellDef="let element"> {{element.hourlyrate}}</td>
         </ng-container>
 
         <!-- Added By -->
 
         <ng-container matColumnDef="AddedBy" *ngIf="(flag.toLocaleLowerCase() != 'sales')">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Added By" mat-sort-header >Added By</th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Added By" mat-sort-header>Added By</th>
           <td mat-cell *matCellDef="let element">
             <ng-container
               *ngIf="element.consultantflg === 'sales' || element.consultantflg === 'presales'; then salesOrPreSales else recruiting"></ng-container>
@@ -150,13 +151,13 @@
         </ng-container>
         <!-- Priority Column -->
         <ng-container matColumnDef="Priority">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Priority" mat-sort-header >Priority </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Priority" mat-sort-header>Priority </th>
           <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
         </ng-container>
 
         <!-- Status Column -->
         <ng-container matColumnDef="Status">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status" mat-sort-header > Status </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status" mat-sort-header> Status </th>
           <td mat-cell *matCellDef="let consultant">
             <!-- <span><button mat-raised-button (click)="onStatusUpdate(consultant)" > {{consultant.status}}</button> </span> -->
             <ng-container
@@ -180,35 +181,54 @@
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let consultant" nowrap>
             <span class="action-buttons">
-            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT')" mat-icon-button
-              *ngIf="consultant.status!='Verified' || hasAcces!='Employee'" (click)="editConsultant(consultant)"
-              class="action-button-ed">
-              <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT')}">edit</mat-icon>
-            </button>
-            &nbsp;
-            <ng-container
-              *ngIf="(flag.toLocaleLowerCase() === 'presales' ||  flag.toLocaleLowerCase() === 'recruiting') then presales else sales">
-            </ng-container>
-            <ng-template #sales><!--[disabled]="!privilegeServ.hasPrivilege('MOVETOPRESALES')"-->
-              <button mat-icon-button  [style.cursor]="'pointer'"
-                *ngIf="move2sales == true && consultant.status=='Active' && flag=='sales'" (click)="moveProfileToSales(consultant,'Pre-Sales')">
-                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOPRESALES')}">
-                  arrow_backward</mat-icon>
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT')" mat-icon-button
+                *ngIf="consultant.status!='Verified' || hasAcces!='Employee'" (click)="editConsultant(consultant)"
+                class="action-button-ed">
+                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT')}">edit</mat-icon>
               </button>
-            </ng-template>
-            <ng-template #presales>
-              <button mat-icon-button [disabled]="!privilegeServ.hasPrivilege('MOVETOSALES')" [style.cursor]="'pointer'"
-                *ngIf="consultant.status=='Verified' && flag!='Recruiting'" (click)="moveProfileToSales(consultant,'Sales')">
-                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES')}">arrow_forward</mat-icon>
+              &nbsp;
+              <ng-container
+                *ngIf="(flag.toLocaleLowerCase() === 'presales' ||  flag.toLocaleLowerCase() === 'recruiting') then presales else sales">
+              </ng-container>
+
+              <ng-container
+                *ngIf="(flag.toLocaleLowerCase() === 'recruiting' && consultant.status=='Initiated') then anotherCondition">
+              </ng-container>
+
+              <ng-template #sales><!--[disabled]="!privilegeServ.hasPrivilege('MOVETOPRESALES')"-->
+                <button mat-icon-button [style.cursor]="'pointer'"
+                  *ngIf="move2sales == true && consultant.status=='Active' && flag=='sales'"
+                  (click)="moveProfileToSales(consultant,'Pre-Sales')">
+                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOPRESALES')}">
+                    arrow_backward</mat-icon>
+                </button>
+              </ng-template>
+
+              <ng-template #anotherCondition><!--[disabled]="!privilegeServ.hasPrivilege('MOVETOPRESALES')"-->
+                <button mat-icon-button [style.cursor]="'pointer'"
+                  *ngIf="move2sales == true && consultant.status=='Initiated' && flag.toLocaleLowerCase() === 'recruiting'"
+                  (click)="moveProfileToSales(consultant,'Pre-Sales')">
+                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOPRESALES')}">
+                    arrow_backward</mat-icon>
+                </button>
+              </ng-template>
+
+
+              <ng-template #presales>
+                <button mat-icon-button [disabled]="!privilegeServ.hasPrivilege('MOVETOSALES')"
+                  [style.cursor]="'pointer'" *ngIf="consultant.status=='Verified' && flag!='Recruiting'"
+                  (click)="moveProfileToSales(consultant,'Sales')">
+                  <mat-icon
+                    [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES')}">arrow_forward</mat-icon>
+                </button>
+              </ng-template>
+              <!-- delete -->
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT')"
+                *ngIf="hasAcces !== 'Employee' && hasAcces !== 'Team Lead'" mat-icon-button
+                (click)="deleteConsultant(consultant)" class="action-button-ed">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT')}">delete</mat-icon>
               </button>
-            </ng-template>
-            <!-- delete -->
-            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT')"
-              *ngIf="hasAcces !== 'Employee' && hasAcces !== 'Team Lead'" mat-icon-button
-              (click)="deleteConsultant(consultant)" class="action-button-ed">
-              <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT')}">delete</mat-icon>
-            </button>
-          </span>
+            </span>
           </td>
         </ng-container>
         <!-- table columns ends  -->
