email-extraction and forgot-password

--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -133,3 +133,10 @@ p {
     padding-bottom: 10px;
 }
 
+.timer {
+    text-align: right;
+    padding-bottom: 10px;
+    font-weight: 600;
+    color: red;
+}
+
