--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -27,17 +27,31 @@
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
-
                 <!-- Name Column-->
-                <ng-container matColumnDef="candidate_name">
+                <!-- <ng-container matColumnDef="candidate_name">
                     <th mat-header-cell *matHeaderCellDef>Candidate Name
                     </th>
                     <td mat-cell *matCellDef="let element">
-                        
                         <span class="consultant-name">
-                            <a href="{{element?.profile_url}}" target="_blank" >{{element?.candidate_name}} </a>
+                            <a href="{{element?.profile_url}}" target="_blank">{{element?.candidate_name}} </a>
                         </span>
-                    
+                        <span>
+                            <mat-icon class="privileges item-icon"
+                                (click)="lockProfile(element.c_id)">lock_person</mat-icon>
+                        </span>
+                    </td>
+                </ng-container> -->
+                <ng-container matColumnDef="candidate_name">
+                    <th mat-header-cell *matHeaderCellDef>Candidate Name</th>
+                    <td mat-cell *matCellDef="let element" >
+                        <div class="cell-container">
+                        <span class="consultant-name">
+                            <a href="{{element?.profile_url}}" target="_blank">{{element?.candidate_name}} </a>
+                        </span>
+                        <span class="right-align profile" matTooltip="Lock Profile">
+                            <mat-icon class="privileges item-icon" (click)="lockProfile(element.c_id)">lock_person</mat-icon>
+                        </span>
+                    </div>
                     </td>
                 </ng-container>
                 <!-- Technology Column-->
@@ -57,23 +71,33 @@
                         {{element?.category}} </td>
                 </ng-container>
                 <!-- Experience Column-->
-                <ng-container matColumnDef="profile_url">
-                    <th mat-header-cell *matHeaderCellDef > LinkedIn Url </th>
+                <!-- <ng-container matColumnDef="profile_url">
+                    <th mat-header-cell *matHeaderCellDef> LinkedIn Url </th>
                     <td mat-cell *matCellDef="let element">
                         <span class="consultant-name">
                             <a class="profile" (click)="lockProfile(element.c_id)">Lock
                                 Profile</a>
                         </span>
-
                     </td>
+                </ng-container> -->
+
+                <ng-container matColumnDef="experience_summary">
+                    <th mat-header-cell *matHeaderCellDef style="width:20%"> Experience summary </th>
+                    <td mat-cell *matCellDef="let element" matTooltip="{{element?.experience_summary}}"
+                        matTooltipPosition="below" style="width:20%; overflow: hidden; text-overflow: ellipsis;">
+                        {{element?.experience_summary}} </td>
                 </ng-container>
+
+
 
                 <ng-container matColumnDef="job_title">
                     <th mat-header-cell *matHeaderCellDef style="width:40%"> Status </th>
-                    <td mat-cell *matCellDef="let element" matTooltip="{{element?.job_title}}" matTooltipPosition="below" style="width:40%; overflow: hidden; text-overflow: ellipsis;"> {{element?.job_title}} </td>
+                    <td mat-cell *matCellDef="let element" matTooltip="{{element?.job_title}}"
+                        matTooltipPosition="below" style="width:40%; overflow: hidden; text-overflow: ellipsis;">
+                        {{element?.job_title}} </td>
                 </ng-container>
 
-                <!-- table ROW -->
+                <!-- table ROW  experience_summary -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
