--- a/src/app/usit/components/email-extraction/email-body/email-body.component.scss
+++ b/src/app/usit/components/email-extraction/email-body/email-body.component.scss
@@ -99,3 +99,11 @@
   .static-label {
     font-weight: bold;
   }
+
+  .scrollable-container {
+    max-height: 600px; /* Adjust height as needed */
+    overflow-x: auto; /* Enable vertical scrolling */
+  }
+ 
+
+  
