--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -465,9 +465,7 @@
     <div class="analysis-left-div">
       <div class="table-container table-wrapper">
         <div class="header-container-analysis">
-          <span class="header-text">Category Analysis</span>
-
-          <div class="vendor-actions">
+          <span class="header-text">Category Analysis</span>          <div class="vendor-actions">
             <div class="search-vendor">
               <input matInput type="text" class="search" placeholder="search category"
                 (keyup)="onCategoryFilter($event)">
@@ -492,7 +490,7 @@
             <ng-container matColumnDef="Category">
               <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
               </th>
-              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.job_title}} </td>
             </ng-container>
 
             <ng-container matColumnDef="VendorCount">
@@ -500,7 +498,7 @@
                 Count
               </th>
               <td mat-cell *matCellDef="let element">
-                <span class="count" (click)="vendorCategoryPopup(element.category_skill,element.posted_on, 'vendor')">
+                <span class="count" (click)="vendorCategoryPopup(element.job_title,element.posted_on, 'vendor')">
                   {{element.vendorcount}}
                 </span>
               </td>
@@ -572,7 +570,7 @@
 
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources" style="padding-right: 6px;">
-      <span class="header-text">Dice Requirement Tags</span>
+      <span class="header-text">Daily Requirements Tags</span>
 
       <div class="vendor-actions">
         <div class="search-vendor">
