--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -8,12 +8,12 @@
             Email Extraction
         </span>
         <div class="hot-list-actions">
-            <button  matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-email" (click)="addEmail()">
+            <button matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-email" (click)="addEmail()">
                 <mat-icon class="item-icon">add_circle</mat-icon>
             </button>
 
             <div class="search-hot-list">
-                <input matInput type="text" class="search" placeholder="search">
+                <input matInput type="text" class="search" placeholder="search" (keyup)="applyFilter($event)">
                 <!-- (keyup)="applyFilter($event)" -->
             </div>
         </div>
@@ -28,48 +28,46 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 3%">
+                    <th mat-header-cell *matHeaderCellDef>
                         S.No </th>
-                    <td mat-cell *matCellDef="let element" style="width: 3%"> {{element?.serialNum}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
+                <!-- Name Column-->
 
-                <!-- Subject Column-->
                 <ng-container matColumnDef="Subject">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject" style="width: 20%">Subject</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 20%"> {{element?.posted_on | date:'MM-dd-yyyy'}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject">
+                        Subject</th>
+                    <td mat-cell *matCellDef="let element" nowrap>{{element?.subject}} </td>
                 </ng-container>
-
                 <!-- Sender Column-->
                 <ng-container matColumnDef="Sender">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Sender" style="width: 15%">
-                        Sender  </th>
-                    <td mat-cell *matCellDef="let element" style="width: 15%"><span class="consultant-name"><a href="{{element?.job_source}}" target="_blank">{{element?.job_title}}</a>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Sender">
+                        Sender </th>
+                    <td mat-cell *matCellDef="let element"><span class="consultant-name">{{element?.sender}}
                         </span> </td>
                 </ng-container>
-
                 <!-- Date Column-->
                 <ng-container matColumnDef="Date">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date" style="width: 10%">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"
+                        nowrap>
                         Date </th>
-                    <td mat-cell *matCellDef="let element" style="width: 10%">
-                        {{element?.category_skill}} </td>
+                    <td mat-cell *matCellDef="let element">
+                        {{element?.sentdate}}</td>
                 </ng-container>
-
                 <!-- Body Column-->
                 <ng-container matColumnDef="Body">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Body"> Body </th>
-                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)">{{element?.employment_type}} </td>
+                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)">VIEW </td>
                 </ng-container>
 
-                <!-- table ROW -->
+                <!-- table ROW  experience_summary -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"  ></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
             <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
         </section>
         <hr>
     </div>
-
 
     <div class="paginator">
         <!-- paginator -->
