--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -116,7 +116,7 @@
         <ng-container matColumnDef="Experience">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header> Experience
           </th>
-          <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
+          <td mat-cell *matCellDef="let element" class="text-align"> {{element.experience}} </td>
         </ng-container>
 
         <!-- Relocation Column -->
@@ -129,7 +129,7 @@
         <!-- RAte Column -->
         <ng-container matColumnDef="Rate">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header> Rate </th>
-          <td mat-cell *matCellDef="let element"> {{element.hourlyrate}}</td>
+          <td mat-cell *matCellDef="let element" class="text-align"> {{element.hourlyrate}}</td>
         </ng-container>
 
         <!-- Added By -->
