--- a/src/app/usit/components/accounts&billing/invoice-list/add-invoice/add-invoice.component.scss
+++ b/src/app/usit/components/accounts&billing/invoice-list/add-invoice/add-invoice.component.scss
@@ -1,13 +1,4 @@
-.responsive-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
 
-.spacer {
-    flex: 1;
-}
 
 @media screen and (max-width: 768px) {
     .responsive-list {
@@ -20,22 +11,13 @@
     }
 }
 
-.start-end-list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.end-item {
-    margin-left: auto;
-}
-
 .form-column-left {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     .fg-div{
-        width: 100%;
+        width: 50%;
         display: contents;
     }
 }
@@ -93,50 +75,11 @@
     gap: 10px;
     padding-right: 45px;
 }
-
-ul {
-    padding-inline-start: 10px;
-}
-
-ul.breadcrumb {
-    list-style: none;
-}
-
-ul.breadcrumb li {
-    display: inline;
-}
-
-ul.breadcrumb li+li:before {
-    color: black;
-    content: "/\00a0";
-}
-
-ul.breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-}
-
-ul.breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-}
-
 .mat-card {
     max-width: 96%;
     padding-top: 20px;
-
 }
 
-.mat-list {
-    max-width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.mat-mdc-list-item-content {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
 
 .mat-icon-button {
     width: auto;
@@ -156,20 +99,9 @@ ul.breadcrumb li a:hover {
     overflow: auto;
 }
 
-.anchor-link {
-    color: inherit;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
 .header-text {
     padding-left: 8px;
     font-weight: 600;
-}
-
-.mat-mdc-form-field-infix {
-    padding-top: 0;
 }
 
 .header-container {
@@ -218,56 +150,91 @@ mat-error {
     }
 }
 
-.country-selector {
-    opacity: 1 !important;
-    bottom: 8px !important;
+/*kiran */
+
+.form-column-left11 {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .fg-div{
+        width: 50%;
+        display: contents;
+    }
 }
 
-input:not(.country-search) {
-    bottom: 3px;
-    left: 10px;
+.form-column-right11 {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .select-role-field {
+        width: 100%;
+        display: contents;
+    }
+
+    .fg-div{
+        width: 100%;
+        display: contents;
+      }
 }
 
-input.country-search {
-    width: 90%;
-    border: none;
-    border-bottom: 1px solid #f2f0f0;
-    font-size: 14px;
-    padding: 10px 10px !important;
-}
 
-.country-list-button {
-    font-size: 0.8rem !important;
-}
-
-.mat-mdc-menu-content:not(:empty) {
-    max-height: 250px !important;
-}
-
-mat-mdc-menu-content {
-    max-height: 250px !important;
-}
-
-.mat-mdc-menu-panel .ngx-mat-tel-input-mat-menu-panel {
-    max-height: 250px !important;
-}
-
-.intl-input {
-    opacity: 1;
-}
-
-.mdc-text-field__input::-webkit-calendar-picker-indicator {
-  display: block !important;
-}
-
-.header-container-closure-details {
+.form {
     display: flex;
     flex-direction: row;
-    align-items: center;
+}
+
+.form .form-column-left11 .mat-mdc-form-field {
+    width: 80%;
+    margin-bottom: 12px;
+}
+
+.form .form-column-right11 .mat-mdc-form-field {
+    width: 80%;
+    margin-bottom: 12px;
+}
+
+.form-button {
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    height: 48px;
-    padding: 0px 37px;
-    z-index: 99999;
-    top: 0;
-    overflow: hidden;
-  }
+
+}
+
+.form-button-left11 {
+    width: 50%;
+    display: flex !important;
+    justify-content: flex-start;
+}
+
+.form-button-right11 {
+    margin-top: 8px;
+    display: flex !important;
+    justify-content: flex-end;
+    gap: 10px;
+    padding-right: 45px;
+}
+
+
+
+@media screen and (max-width: 425px) {
+    .form {
+        flex-direction: column;
+    }
+
+    .form-column-left11,
+    .form-column-right11 {
+        width: 100%;
+    }
+
+    .center-card {
+        margin: 0 auto;
+        padding: 8px;
+    }
+
+    .header-container {
+        padding: 6px 28px;
+    }
+}
