--- a/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
@@ -9,7 +9,8 @@
         </span>
 
         <div class="submission-actions">
-            <button  matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addInvoice()">
+            <button matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission"
+                (click)="addInvoice()">
                 <mat-icon class="item-icon">add_circle</mat-icon>
             </button>
 
@@ -23,49 +24,49 @@
             <table mat-table [dataSource]="dataSource" oncopy="return false">
                 <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
-            
+
                 <!-- Serial Number Column -->
                 <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef> # </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
-            
+
                 <!-- Invoice Date Column -->
                 <ng-container matColumnDef="InvoiceDate">
                     <th mat-header-cell *matHeaderCellDef>Invoice Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.invoicenumber}} </td>
                 </ng-container>
-            
+
                 <!-- Due Date Column -->
                 <ng-container matColumnDef="DueDate">
                     <th mat-header-cell *matHeaderCellDef>Due Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Bill To Vendor Column -->
                 <ng-container matColumnDef="BillToVendor">
                     <th mat-header-cell *matHeaderCellDef>Bill To Vendor</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
                     <th mat-header-cell *matHeaderCellDef>Consultant</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Net Term Column -->
                 <ng-container matColumnDef="NetTerm">
                     <th mat-header-cell *matHeaderCellDef>NetTerm</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Number Of Hours Column -->
                 <ng-container matColumnDef="NoOfHours">
                     <th mat-header-cell *matHeaderCellDef>No. Of Hours</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Rate Column -->
                 <ng-container matColumnDef="Rate">
                     <th mat-header-cell *matHeaderCellDef>Rate</th>
@@ -77,20 +78,31 @@
                     <th mat-header-cell *matHeaderCellDef>Invoice Value</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Status Column -->
                 <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
                 </ng-container>
-            
+
                 <!-- Action Column -->
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef>Action</th>
+                    <!-- 
                     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <th mat-header-cell *matHeaderCellDef> Action </th> -->
+                    <td mat-cell *matCellDef="let element" class="action-buttons">
+                        <button mat-icon-button (click)="editInvoice(element)" class="action-button-ed">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                        <button mat-icon-button (click)="deleteInvoice(element)" class="action-button-ed">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </td>
+
                 </ng-container>
                 <!-- table columns ends  -->
-            
+
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
